--- a/.github/workflows/build-test-and-deploy.yml
+++ b/.github/workflows/build-test-and-deploy.yml
@@ -33,6 +33,11 @@ on:
         required: true
         default: true
         type: boolean
+      docker_multiplatform:
+        description: docker multiplatform build or not
+        required: true
+        default: true
+        type: boolean
 
 permissions:
   contents: read
@@ -49,4 +54,4 @@ jobs:
       registry_org: ${{ inputs.registry_org || 'hmpps' }}
       additional_docker_tag: ${{ inputs.additional_docker_tag }}
       push: ${{ inputs.push || true }}
-
+      docker_multiplatform: ${{ inputs.docker_multiplatform }}
