--- a/.github/workflows/build-test-and-deploy.yml
+++ b/.github/workflows/build-test-and-deploy.yml
@@ -33,6 +33,11 @@ on:
         required: true
         default: true
         type: boolean
+      docker_multiplatform:
+        description: docker multiplatform build or not
+        required: true
+        default: true
+        type: boolean
 
 permissions:
   contents: read
@@ -42,11 +47,11 @@ jobs:
 
   test_docker_build:
     name: Build docker image from hmpps-github-actions
-    uses: ministryofjustice/hmpps-github-actions/.github/workflows/test_docker_build.yml@feat/HEAT-344-share-app-version-across-jobs
+    uses: ministryofjustice/hmpps-github-actions/.github/workflows/build-test-and-deploy.yml@feat/HEAT-344-share-app-version-across-jobs
     secrets: inherit
     with:
       docker_registry: ${{ inputs.docker_registry || 'quay.io' }}
       registry_org: ${{ inputs.registry_org || 'hmpps' }}
       additional_docker_tag: ${{ inputs.additional_docker_tag }}
       push: ${{ inputs.push || true }}
-
+      docker_multiplatform: ${{ inputs.docker_multiplatform }}
