--- a/.github/workflows/build-test-and-deploy.yml
+++ b/.github/workflows/build-test-and-deploy.yml
@@ -6,52 +6,19 @@ on:
       - main
 
   workflow_dispatch:
-    inputs:
-      docker_registry:
-        description: Docker registry
-        required: true
-        default: 'ghcr.io'
-        type: choice
-        options:
-          - 'ghcr.io'
-          - 'quay.io'
-      registry_org:
-        description: Docker registry organisation
-        required: true
-        default: 'ministryofjustice'
-        type: choice
-        options:
-          - 'ministryofjustice'
-          - 'hmpps'
-      additional_docker_tag:
-        description: Additional docker tag that can be used to specify stable  tags 
-        required: false
-        default: ''
-        type: string
-      push:
-        description: Push docker image to registry flag
-        required: true
-        default: true
-        type: boolean
-      docker_multiplatform:
-        description: docker multiplatform build or not
-        required: true
-        default: true
-        type: boolean
-
-permissions:
-  contents: read
-  packages: write
-  
+    
 jobs:
 
-  test_docker_build:
-    name: Build docker image from hmpps-github-actions
-    uses: ministryofjustice/hmpps-github-actions/.github/workflows/build-test-and-deploy.yml@feat/HEAT-344-share-app-version-across-jobs
-    secrets: inherit
-    with:
-      docker_registry: ${{ inputs.docker_registry || 'quay.io' }}
-      registry_org: ${{ inputs.registry_org || 'hmpps' }}
-      additional_docker_tag: ${{ inputs.additional_docker_tag }}
-      push: ${{ inputs.push || true }}
-      docker_multiplatform: ${{ inputs.docker_multiplatform }}
+  test_environment_secret1:
+    runs-on: ubuntu-latest
+    environment: test1
+    - name: Run tests
+      run: |
+        echo "user=${{ secret.user }}" | tee -a "$GITHUB_OUTPUT"
+
+  test_environment_secret1:
+    runs-on: ubuntu-latest
+    environment: test2
+    - name: Run tests
+      run: |
+        echo "user=${{ secret.user }}" | tee -a "$GITHUB_OUTPUT"
