--- a/.github/workflows/build-test-and-deploy.yml
+++ b/.github/workflows/build-test-and-deploy.yml
@@ -6,21 +6,58 @@ on:
       - main
 
   workflow_dispatch:
-    
+    inputs:
+      docker_registry:
+        description: Docker registry
+        required: true
+        default: 'ghcr.io'
+        type: choice
+        options:
+          - 'ghcr.io'
+          - 'quay.io'
+      registry_org:
+        description: Docker registry organisation
+        required: true
+        default: 'ministryofjustice'
+        type: choice
+        options:
+          - 'ministryofjustice'
+          - 'hmpps'
+      additional_docker_tag:
+        description: Additional docker tag that can be used to specify stable tags
+        required: false
+        default: ''
+        type: string
+      push:
+        description: Push docker image to registry flag
+        required: true
+        default: true
+        type: boolean
+      docker_multiplatform:
+        description: docker multiplatform build or not
+        required: true
+        default: true
+        type: boolean
+
+permissions:
+  contents: read
+  packages: write
+
 jobs:
 
-  test_environment_secret1:
-    runs-on: ubuntu-latest
-    environment: test1
-    steps:
-      - name: Run tests
-        run: |
-          echo "user2=${{ secrets.user }}"| sed 's/./& /g' | tee -a "$GITHUB_OUTPUT"
+  create_app_version:
+    name: Create app version
+    uses: ministryofjustice/hmpps-github-actions/.github/workflows/create_app_version.yml@feat/HEAT-344-create-deploy_env_workflow
 
-  test_environment_secret2:
-    runs-on: ubuntu-latest
-    environment: test2
-    steps:
-      - name: Run tests
-        run: |
-          echo "user2=${{ secrets.user }}" | sed 's/./& /g'| tee -a "$GITHUB_OUTPUT"
+  test_docker_build:
+    name: Build docker image from hmpps-github-actions
+    needs: [ create_app_version ]
+    uses: ministryofjustice/hmpps-github-actions/.github/workflows/docker_build.yml@feat/HEAT-344-create-deploy_env_workflow
+    secrets: inherit
+    with:
+      docker_registry: ${{ inputs.docker_registry || 'ghcr.io' }}
+      registry_org: ${{ inputs.registry_org || 'ministryofjustice' }}
+      additional_docker_tag: ${{ inputs.additional_docker_tag }}
+      push: ${{ inputs.push || true }}
+      docker_multiplatform: ${{ inputs.docker_multiplatform || false }}
+      app_version: ${{ needs.create_app_version.outputs.version }}
