--- a/.github/workflows/build-test-and-deploy.yml
+++ b/.github/workflows/build-test-and-deploy.yml
@@ -38,6 +38,11 @@ on:
         required: true
         default: true
         type: boolean
+      channel_id:
+        description: Slack channel id
+        required: true
+        default: 'NO_SLACK'
+        type: string
 
 permissions:
   contents: read
@@ -60,4 +65,14 @@ jobs:
       additional_docker_tag: ${{ inputs.additional_docker_tag }}
       push: ${{ inputs.push || true }}
       docker_multiplatform: ${{ inputs.docker_multiplatform || false }}
+      app_version: ${{ needs.create_app_version.outputs.version }}
+      
+  deploy_env:
+    name: Deploy 
+    needs: [ docker_build ]
+    uses: ministryofjustice/hmpps-github-actions/.github/workflows/deploy_env.yml@feat/HEAT-344-create-deploy_env_workflow
+    secrets: inherit
+    with:
+      environment: 'development'
+      channel_id: 'NO_SLACK'
       app_version: ${{ needs.create_app_version.outputs.version }}
