--- a/.github/workflows/build-test-and-deploy.yml
+++ b/.github/workflows/build-test-and-deploy.yml
@@ -50,22 +50,22 @@ permissions:
 
 jobs:
 
-  # create_app_version:
-  #   name: Create app version
-  #   uses: ministryofjustice/hmpps-github-actions/.github/workflows/create_app_version.yml@feat/HEAT-344-create-deploy_env_workflow
+  create_app_version:
+    name: Create app version
+    uses: ministryofjustice/hmpps-github-actions/.github/workflows/create_app_version.yml@feat/HEAT-344-create-deploy_env_workflow
 
-  # docker_build:
-  #   name: Build docker image from hmpps-github-actions
-  #   needs: [ create_app_version ]
-  #   uses: ministryofjustice/hmpps-github-actions/.github/workflows/docker_build.yml@feat/HEAT-344-create-deploy_env_workflow
-  #   secrets: inherit
-  #   with:
-  #     docker_registry: ${{ inputs.docker_registry || 'ghcr.io' }}
-  #     registry_org: ${{ inputs.registry_org || 'ministryofjustice' }}
-  #     additional_docker_tag: ${{ inputs.additional_docker_tag }}
-  #     push: ${{ inputs.push || true }}
-  #     docker_multiplatform: ${{ inputs.docker_multiplatform || false }}
-  #     app_version: ${{ needs.create_app_version.outputs.version }}
+  docker_build:
+    name: Build docker image from hmpps-github-actions
+    needs: [ create_app_version ]
+    uses: ministryofjustice/hmpps-github-actions/.github/workflows/docker_build.yml@feat/HEAT-344-create-deploy_env_workflow
+    secrets: inherit
+    with:
+      docker_registry: ${{ inputs.docker_registry || 'ghcr.io' }}
+      registry_org: ${{ inputs.registry_org || 'ministryofjustice' }}
+      additional_docker_tag: ${{ inputs.additional_docker_tag }}
+      push: ${{ inputs.push || true }}
+      docker_multiplatform: ${{ inputs.docker_multiplatform || false }}
+      app_version: ${{ needs.create_app_version.outputs.version }}
       
   deploy_env:
     name: Deploy 
