--- a/helm_deploy/san-typescript-test/values.yaml
+++ b/helm_deploy/san-typescript-test/values.yaml
@@ -8,7 +8,7 @@ generic-service:
   replicaCount: 4
 
   image:
-    repository: quay.io/hmpps/san-typescript-test
+    repository: ghcr.io/ministryofjustice/san-typescript-test
     tag: app_version # override at deployment time
     port: 3000
 
