--- a/.github/workflows/build-test-and-deploy.yml
+++ b/.github/workflows/build-test-and-deploy.yml
@@ -58,27 +58,30 @@ jobs:
       - name: create_app_version
         id: create_app_version
         uses: ministryofjustice/hmpps-github-actions/.github/actions/create_app_version@move_create_app_version_in_action
-
-  docker_build:
-    name: Build docker image from hmpps-github-actions
-    needs: [ create_app_version ]
-    uses: ministryofjustice/hmpps-github-actions/.github/workflows/docker_build.yml@main
-    secrets: inherit
-    with:
-      docker_registry: ${{ inputs.docker_registry || 'ghcr.io' }}
-      registry_org: ${{ inputs.registry_org || 'ministryofjustice' }}
-      additional_docker_tag: ${{ inputs.additional_docker_tag }}
-      push: ${{ inputs.push || true }}
-      docker_multiplatform: ${{ inputs.docker_multiplatform || false }}
-      app_version: ${{ needs.create_app_version.outputs.version }}
+      - name: display variable 
+        run: |
+          echo "${{ steps.create_app_version.outputs.version }}"
+          
+  # docker_build:
+  #   name: Build docker image from hmpps-github-actions
+  #   needs: [ create_app_version ]
+  #   uses: ministryofjustice/hmpps-github-actions/.github/workflows/docker_build.yml@main
+  #   secrets: inherit
+  #   with:
+  #     docker_registry: ${{ inputs.docker_registry || 'ghcr.io' }}
+  #     registry_org: ${{ inputs.registry_org || 'ministryofjustice' }}
+  #     additional_docker_tag: ${{ inputs.additional_docker_tag }}
+  #     push: ${{ inputs.push || true }}
+  #     docker_multiplatform: ${{ inputs.docker_multiplatform || false }}
+  #     app_version: ${{ needs.create_app_version.outputs.version }}
       
-  deploy_env:
-    name: Deploy 
-    needs: 
-      - create_app_version
-      - docker_build
-    uses: ministryofjustice/hmpps-github-actions/.github/workflows/deploy_env.yml@main
-    secrets: inherit
-    with:
-      environment: 'dev'
-      app_version: '${{ needs.create_app_version.outputs.version }}'
+  # deploy_env:
+  #   name: Deploy 
+  #   needs: 
+  #     - create_app_version
+  #     - docker_build
+  #   uses: ministryofjustice/hmpps-github-actions/.github/workflows/deploy_env.yml@main
+  #   secrets: inherit
+  #   with:
+  #     environment: 'dev'
+  #     app_version: '${{ needs.create_app_version.outputs.version }}'
